[package]
name = "mqtt_test"
version = "0.1.0"
edition = "2024"
description = "MQTT v5 broker compliance testing tool"

[dependencies]
tokio  = { version = "1", features = ["full"] }
bytes  = "1"
clap   = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
indicatif = "0.17"
tokio-rustls = "0.26"
rustls-pemfile = "2"
